kubernetes/applications/lidarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: apps
spec:
  selector:
    matchLabels:
      app: lidarr
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr
          volumeMounts:
            - name: config
              mountPath: /config
            - name: music
              mountPath: /music
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr
        - name: music
          nfs:
            server: 192.168.0.123
            path: /mnt/mediadisk/music
        - name: downloads
          nfs:
            server: 192.168.0.123
            path: /mnt/mediadisk/downloads
