kubernetes/applications/lidarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 8686
      targetPort: 8686
  selector:
    app: lidarr
